Update ref conf

--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -804,6 +804,9 @@ j3100textcolor   =
 #                                                      If your game is not sensitive to VGA RAM I/O speed, then turning on this option
 #                                                      will do nothing but cause a significant drop in frame rate which is probably not
 #                                                      what you want. Recommended values -1, 0 to 2000.
+#                                     lfb vmemdelay: Set this option to true if you need vmemdelay to apply to SVGA and linear framebuffer video modes as well.
+#                                                      This affects anything in which DOSBox-X emulates as a linear framebuffer including MDA/Hercules and PC-98 LFB.
+#                                                      Note that this option may slightly reduce emulator performance with such modes.
 #                                   prevent capture: This option allows you to prevent capture of the DOSBox window, if an API is provided by the system to do so.
 #                                                      empty or none: the window is normal and it can be screen captured.
 #                                                      blank: notify the system so that if a screenshot is attempted, the window appears blank.
@@ -1008,6 +1011,7 @@ j3100textcolor   =
 #                                                      Possible values: true, false, 1, 0, auto.
 int 10h use video parameter table                 = auto
 vmemdelay                                         = 0
+lfb vmemdelay                                     = false
 prevent capture                                   = 
 vmemsize                                          = -1
 vmemsizekb                                        = 0
