Clarify memalias auto behavior

--- a/contrib/windows/installer/dosbox-x.reference.setup.conf
+++ b/contrib/windows/installer/dosbox-x.reference.setup.conf
@@ -411,6 +411,9 @@ debuggerrun = debugger
 #DOSBOX-X-ADV:#                                                    trying to run assumes aliasing, or otherwise plays cheap tricks with paging,
 #DOSBOX-X-ADV:#                                                    enabling this option can help. Note that enabling this option can cause slight performance degradation. Set to 0 to disable.
 #DOSBOX-X-ADV:#                                                    Recommended values when enabled:
+#DOSBOX-X-ADV:#                                                        0: Pick a value automatically according to cputype.
+#DOSBOX-X-ADV:#                                                           NOTE: Changing the cputype after initial startup will not change the auto setting i.e.
+#DOSBOX-X-ADV:#                                                           starting with cputype=8086 will use a memalias of 20 even if you later change cputype to 386.
 #DOSBOX-X-ADV:#                                                        24: 16MB aliasing. Common on 386SX systems (CPU had 24 external address bits)
 #DOSBOX-X-ADV:#                                                            or 386DX and 486 systems where the CPU communicated directly with the ISA bus (A24-A31 tied off)
 #DOSBOX-X-ADV:#                                                        26: 64MB aliasing. Some 486s had only 26 external address bits, some motherboards tied off A26-A31
