--- a/contrib/windows/installer/dosbox-x.reference.setup.conf
+++ b/contrib/windows/installer/dosbox-x.reference.setup.conf
@@ -409,7 +409,7 @@ debuggerrun = debugger
 #DOSBOX-X-ADV:#                                                    Many 386/486 class motherboards and processors prior to 1995
 #DOSBOX-X-ADV:#                                                    suffered from memory aliasing for various technical reasons. If the software you are
 #DOSBOX-X-ADV:#                                                    trying to run assumes aliasing, or otherwise plays cheap tricks with paging,
-#DOSBOX-X-ADV:#                                                    enabling this option can help. Note that enabling this option can cause slight performance degradation. Set to 0 to disable.
+#DOSBOX-X-ADV:#                                                    enabling this option can help. Note that enabling this option can cause slight performance degradation.
 #DOSBOX-X-ADV:#                                                    Recommended values when enabled:
 #DOSBOX-X-ADV:#                                                        0: Pick a value automatically according to cputype.
 #DOSBOX-X-ADV:#                                                           NOTE: Changing the cputype after initial startup will not change the auto setting i.e.
