--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -401,7 +401,7 @@ debuggerrun = debugger
 #                                                    Many 386/486 class motherboards and processors prior to 1995
 #                                                    suffered from memory aliasing for various technical reasons. If the software you are
 #                                                    trying to run assumes aliasing, or otherwise plays cheap tricks with paging,
-#                                                    enabling this option can help. Note that enabling this option can cause slight performance degradation. Set to 0 to disable.
+#                                                    enabling this option can help. Note that enabling this option can cause slight performance degradation.
 #                                                    Recommended values when enabled:
 #                                                        0: Pick a value automatically according to cputype.
 #                                                           NOTE: Changing the cputype after initial startup will not change the auto setting i.e.
