--- a/contrib/windows/installer/dosbox-x.reference.setup.conf
+++ b/contrib/windows/installer/dosbox-x.reference.setup.conf
@@ -407,9 +407,8 @@ debuggerrun = debugger
 #DOSBOX-X-ADV:#                                                    -1 means to use a reasonable default.
 #DOSBOX-X-ADV:#                                        memalias: Memory aliasing emulation, in number of valid address bits.
 #DOSBOX-X-ADV:#                                                    Many 386/486 class motherboards and processors prior to 1995
-#DOSBOX-X-ADV:#                                                    suffered from memory aliasing for various technical reasons. If the software you are
-#DOSBOX-X-ADV:#                                                    trying to run assumes aliasing, or otherwise plays cheap tricks with paging,
-#DOSBOX-X-ADV:#                                                    enabling this option can help. Note that enabling this option can cause slight performance degradation.
+#DOSBOX-X-ADV:#                                                    had memory aliases for various technical reasons such as having
+#DOSBOX-X-ADV:#                                                    less than 32 address bits on the CPU die.
 #DOSBOX-X-ADV:#                                                    Recommended values when enabled:
 #DOSBOX-X-ADV:#                                                        0: Pick a value automatically according to cputype.
 #DOSBOX-X-ADV:#                                                           NOTE: Changing the cputype after initial startup will not change the auto setting i.e.
