--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -399,9 +399,8 @@ debuggerrun = debugger
 #                                                    -1 means to use a reasonable default.
 #                                        memalias: Memory aliasing emulation, in number of valid address bits.
 #                                                    Many 386/486 class motherboards and processors prior to 1995
-#                                                    suffered from memory aliasing for various technical reasons. If the software you are
-#                                                    trying to run assumes aliasing, or otherwise plays cheap tricks with paging,
-#                                                    enabling this option can help. Note that enabling this option can cause slight performance degradation.
+#                                                    had memory aliases for various technical reasons such as having
+#                                                    less than 32 address bits on the CPU die.
 #                                                    Recommended values when enabled:
 #                                                        0: Pick a value automatically according to cputype.
 #                                                           NOTE: Changing the cputype after initial startup will not change the auto setting i.e.
