--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -408,6 +408,9 @@ debuggerrun = debugger
 #                                                        24: 16MB aliasing. Common on 386SX systems (CPU had 24 external address bits)
 #                                                            or 386DX and 486 systems where the CPU communicated directly with the ISA bus (A24-A31 tied off)
 #                                                        26: 64MB aliasing. Some 486s had only 26 external address bits, some motherboards tied off A26-A31
+#                                                        32: 4GB aliasing. This is normal for most 486/Pentium and later systems and is the default for most values of cputype.
+#                                                        36: 64GB aliasing. Recommended if you are emulating more than 3.5GB of RAM and Pentium Pro/II Page Size Extensions.
+#                                                        40: 1TB aliasing. Recommended if you are emulating more than 63GB of RAM and Pentium Pro/II Page Size Extensions.
 #                                      nocachedir: If set, MOUNT commands will mount with -nocachedir (disable directory caching) by default.
 #                                     freesizecap: If set to "cap" (="true"), the value of MOUNT -freesize will apply only if the actual free size is greater than the specified value.
 #                                                    If set to "relative", the value of MOUNT -freesize will change relative to the specified value.
