--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -593,6 +593,7 @@ enable pci bus                                  = true
 #                            To fit a scaler in the resolution used at full screen may require a border or side bars.
 #                            To fill the screen entirely, depending on your hardware, a different scaler/fullresolution might work.
 #                            Scalers should work with most output options, but they are ignored for openglpp and TrueType font outputs.
+#                            If you are using OpenGL/Direct3D shaders that need the exact pixels of the video output without scaling, set to hardware_none or hardware2x.
 #                            Possible values: none, normal2x, normal3x, normal4x, normal5x, advmame2x, advmame3x, advinterp2x, advinterp3x, hq2x, hq3x, 2xsai, super2xsai, supereagle, tv2x, tv3x, rgb2x, rgb3x, scan2x, scan3x, gray, gray2x, hardware_none, hardware2x, hardware3x, hardware4x, hardware5x, xbrz, xbrz_bilinear.
 #                glshader: Path to GLSL shader source to use with OpenGL output ("none" to disable, or "default" for default shader).
 #                            Can be either an absolute path, a file in the "glshaders" subdirectory of the DOSBox-X configuration directory, or one of the built-in shaders (e.g. "sharp" for the pixel-perfect scaling mode):
