Add dosbox.conf option to write protect the DOSBox private area in UMB to deal with games that have fast and loose video rendering code that can corrupt that area

--- a/contrib/windows/installer/dosbox-x.reference.setup.conf
+++ b/contrib/windows/installer/dosbox-x.reference.setup.conf
@@ -605,7 +605,7 @@ convertdrivefat                                 = true
 #                            To fit a scaler in the resolution used at full screen may require a border or side bars.
 #                            To fill the screen entirely, depending on your hardware, a different scaler/fullresolution might work.
 #                            Scalers should work with most output options, but they are ignored for openglpp and TrueType font outputs.
-#                            If you are using OpenGL/Direct3D shaders that need the exact pixels of the video output without scaling, set to hardware_none or hardware2x.
+#                            If you are using OpenGL/Direct3D output and a shader that requires it, set to hardware_none or hardware2x.
 #                            Possible values: none, normal2x, normal3x, normal4x, normal5x, advmame2x, advmame3x, advinterp2x, advinterp3x, hq2x, hq3x, 2xsai, super2xsai, supereagle, tv2x, tv3x, rgb2x, rgb3x, scan2x, scan3x, gray, gray2x, hardware_none, hardware2x, hardware3x, hardware4x, hardware5x, xbrz, xbrz_bilinear.
 #                glshader: Path to GLSL shader source to use with OpenGL output ("none" to disable, or "default" for default shader).
 #                            Can be either an absolute path, a file in the "glshaders" subdirectory of the DOSBox-X configuration directory, or one of the built-in shaders (e.g. "sharp" for the pixel-perfect scaling mode):
@@ -2338,6 +2338,9 @@ timeout     = 0
 #DOSBOX-X-ADV:#                                                     Possible values: true, false, 1, 0, auto.
 #DOSBOX-X-ADV:#                              private area in umb: If set, keep private DOS segment in upper memory block, usually segment 0xC800 (Mainline DOSBox behavior)
 #DOSBOX-X-ADV:#                                                     If clear, place private DOS segment at the base of system memory (just below the MCB)
+#DOSBOX-X-ADV:#                       private area write protect: If set, prevent the guest from writing to the DOSBox private area. The emulator itself can still write to it, of course.
+#DOSBOX-X-ADV:#                                                     Some DOS games have sloppy video routines that can spill over and corrupt the private area and cause problems.
+#DOSBOX-X-ADV:#                                                     This option when set can prevent that errant game from causing crashes.
 #                                     quick reboot: If set, the DOS restart call will reboot the emulated DOS (integrated DOS or guest DOS) instead of the virtual machine.
 #                                                     
 #                                              ver: Set DOS version. Specify as major.minor format. A single number is treated as the major version (compatible with LFN support). Common settings are:
@@ -2444,7 +2447,7 @@ timeout     = 0
 #                                     dos idle api: If set, DOSBox-X can lower the host system's CPU load when a supported guest program is idle.
 #DOSBOX-X-ADV-SEE:#
 #DOSBOX-X-ADV-SEE:# Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
-#DOSBOX-X-ADV-SEE:# -> xms memmove causes flat real mode; xms init causes flat real mode; resized free memory block becomes allocated; badcommandhandler; mscdex device name; hma allow reservation; command shell flush keyboard buffer; special operation file prefix; drive z is remote; drive z convert fat; drive z expand path; drive z hide files; automount drive directories; hidenonrepresentable; hma minimum allocation; dos sda size; hma free space; cpm compatibility mode; minimum dos initial private segment; minimum mcb segment; enable dummy device mcb; maximum environment block size on exec; additional environment block size on exec; enable a20 on windows init; zero memory on xms memory allocation; vcpi; unmask timer on disk io; zero int 67h if no ems; zero unused int 68h; emm386 startup active; zero memory on ems memory allocation; ems system handle memory size; ems system handle on even megabyte; ems frame; umb start; umb end; kernel allocation in umb; keep umb on boot; keep private area on boot; private area in umb; autoa20fix; autoloadfix; startincon; int33 max x; int33 max y; int33 xy adjust; int33 mickey threshold; int33 hide host cursor if interrupt subroutine; int33 hide host cursor when polling; int33 disable cell granularity; int 13 disk change detect; int 13 extensions; biosps2; int15 wait force unmask irq; int15 mouse callback does not preserve registers; filenamechar; collating and uppercase; con device use int 16h to detect keyboard input; zero memory on int 21h memory allocation; pipe temporary device
+#DOSBOX-X-ADV-SEE:# -> xms memmove causes flat real mode; xms init causes flat real mode; resized free memory block becomes allocated; badcommandhandler; mscdex device name; hma allow reservation; command shell flush keyboard buffer; special operation file prefix; drive z is remote; drive z convert fat; drive z expand path; drive z hide files; automount drive directories; hidenonrepresentable; hma minimum allocation; dos sda size; hma free space; cpm compatibility mode; minimum dos initial private segment; minimum mcb segment; enable dummy device mcb; maximum environment block size on exec; additional environment block size on exec; enable a20 on windows init; zero memory on xms memory allocation; vcpi; unmask timer on disk io; zero int 67h if no ems; zero unused int 68h; emm386 startup active; zero memory on ems memory allocation; ems system handle memory size; ems system handle on even megabyte; ems frame; umb start; umb end; kernel allocation in umb; keep umb on boot; keep private area on boot; private area in umb; private area write protect; autoa20fix; autoloadfix; startincon; int33 max x; int33 max y; int33 xy adjust; int33 mickey threshold; int33 hide host cursor if interrupt subroutine; int33 hide host cursor when polling; int33 disable cell granularity; int 13 disk change detect; int 13 extensions; biosps2; int15 wait force unmask irq; int15 mouse callback does not preserve registers; filenamechar; collating and uppercase; con device use int 16h to detect keyboard input; zero memory on int 21h memory allocation; pipe temporary device
 #DOSBOX-X-ADV-SEE:#
 xms                                              = true
 #DOSBOX-X-ADV:xms memmove causes flat real mode                = true
@@ -2500,6 +2503,7 @@ umb                                              = true
 #DOSBOX-X-ADV:keep umb on boot                                 = false
 #DOSBOX-X-ADV:keep private area on boot                        = auto
 #DOSBOX-X-ADV:private area in umb                              = true
+#DOSBOX-X-ADV:private area write protect                       = false
 quick reboot                                     = false
 ver                                              = 
 lfn                                              = auto
