--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -593,7 +593,7 @@ enable pci bus                                  = true
 #                            To fit a scaler in the resolution used at full screen may require a border or side bars.
 #                            To fill the screen entirely, depending on your hardware, a different scaler/fullresolution might work.
 #                            Scalers should work with most output options, but they are ignored for openglpp and TrueType font outputs.
-#                            If you are using OpenGL/Direct3D shaders that need the exact pixels of the video output without scaling, set to hardware_none or hardware2x.
+#                            If you are using OpenGL/Direct3D output and a shader that requires it, set to hardware_none or hardware2x.
 #                            Possible values: none, normal2x, normal3x, normal4x, normal5x, advmame2x, advmame3x, advinterp2x, advinterp3x, hq2x, hq3x, 2xsai, super2xsai, supereagle, tv2x, tv3x, rgb2x, rgb3x, scan2x, scan3x, gray, gray2x, hardware_none, hardware2x, hardware3x, hardware4x, hardware5x, xbrz, xbrz_bilinear.
 #                glshader: Path to GLSL shader source to use with OpenGL output ("none" to disable, or "default" for default shader).
 #                            Can be either an absolute path, a file in the "glshaders" subdirectory of the DOSBox-X configuration directory, or one of the built-in shaders (e.g. "sharp" for the pixel-perfect scaling mode):
@@ -2278,6 +2278,9 @@ timeout     = 0
 #                                                     Possible values: true, false, 1, 0, auto.
 #                              private area in umb: If set, keep private DOS segment in upper memory block, usually segment 0xC800 (Mainline DOSBox behavior)
 #                                                     If clear, place private DOS segment at the base of system memory (just below the MCB)
+#                       private area write protect: If set, prevent the guest from writing to the DOSBox private area. The emulator itself can still write to it, of course.
+#                                                     Some DOS games have sloppy video routines that can spill over and corrupt the private area and cause problems.
+#                                                     This option when set can prevent that errant game from causing crashes.
 #                                     quick reboot: If set, the DOS restart call will reboot the emulated DOS (integrated DOS or guest DOS) instead of the virtual machine.
 #                                                     
 #                                              ver: Set DOS version. Specify as major.minor format. A single number is treated as the major version (compatible with LFN support). Common settings are:
@@ -2436,6 +2439,7 @@ kernel allocation in umb                         = false
 keep umb on boot                                 = false
 keep private area on boot                        = auto
 private area in umb                              = true
+private area write protect                       = false
 quick reboot                                     = false
 ver                                              = 
 lfn                                              = auto
