--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -1392,6 +1392,9 @@ blocksize       = 1024
 prebuffer       = 25
 
 [midi]
+#         roland gs sysex: Listen for and handle some Roland GS System Exclusive messages, such as GS Reset and Master Volume.
+#                            This is needed for PC-98 games that have hanging/stuck MIDI note problems because they rely on these
+#                            messages to reset the synth rather than using standard MIDI commands.
 #                  mpu401: Type of MPU-401 to emulate.
 #                            Possible values: intelligent, uart, none.
 #                 mpubase: The IO address of the MPU-401.
@@ -1519,6 +1522,7 @@ prebuffer       = 25
 #      fluid.chorus.depth: Fluidsynth chorus depth.
 #       fluid.chorus.type: Fluidsynth chorus type. 0 is sine wave, 1 is triangle wave.
 #                            Possible values: 0, 1.
+roland gs sysex         = true
 mpu401                  = intelligent
 mpubase                 = 0
 mididevice              = default
@@ -1734,6 +1738,7 @@ io port aliasing                                 = true
 #                                       If auto, automatically choose based on other settings such as GUS type.
 #                                       This setting may be needed for DOS demoscene entries that assume aliasing behavior such as Out of Control by Contract.
 #                                       Possible values: true, false, 1, 0, auto.
+#  warn on out of bounds dram access: Controls whether attempts to access GUS DRAM beyond the 1MB maximum supported by the card are logged to the log file as a warning.
 #                            autoamp: If set, GF1 output will reduce in volume automatically if the sum of all channels exceeds full volume.
 #                                       If not set, then loud music will clip to full volume just as it would on real hardware.
 #                                       Enable this option for loud music if you want a more pleasing rendition without saturation and distortion.
@@ -1789,6 +1794,7 @@ io port aliasing                                 = true
 #                                       with Timidity should work fine.
 gus                                = false
 global register read alias         = auto
+warn on out of bounds dram access  = false
 autoamp                            = false
 unmask dma                         = false
 ignore channel count while active  = false
@@ -2149,6 +2155,9 @@ timeout     = 0
 
 [dos]
 #                                              xms: Enable XMS support.
+#      turn off a20 gate on load if loadfix needed: If enabled, and loading a program below the 64kb boundary, turn off the A20 gate.
+#                                                     This can help with any program with startup code that assumes the segment wraparound of the 8086.
+#                                                     Depending on DOS configuration the A20 gate may be re-enabled later such as calling INT 21h.
 #                xms memmove causes flat real mode: If set, any call to XMS to move/copy memory sets up flat real mode for segment registers DS and ES.
 #                   xms init causes flat real mode: If set, when the DOS kernel initializes XMS it will switch on flat real mode for segment registers DS and ES if appropriate.
 #      resized free memory block becomes allocated: If set, and the DOS application resizes a freed memory block, that block will be marked as allocated to that program.
@@ -2386,6 +2395,7 @@ timeout     = 0
 #                                                     Caution: Enabling this API may cause some programs to think they are running under Windows
 #                                     dos idle api: If set, DOSBox-X can lower the host system's CPU load when a supported guest program is idle.
 xms                                              = true
+turn off a20 gate on load if loadfix needed      = false
 xms memmove causes flat real mode                = true
 xms init causes flat real mode                   = false
 resized free memory block becomes allocated      = true
