--- a/configure.ac
+++ b/configure.ac
@@ -372,8 +372,9 @@ fi
 dnl Some needed libraries for OS2
 dnl perhaps join this with the other target depended checks. move them upwards
 if test x$host = xi386-pc-os2-emx ; then
-    CXXFLAGS="$CXXFLAGS -Zmt"
-    LDFLAGS="$LDFLAGS -Zomf -Zmt"
+    CXXFLAGS="$CXXFLAGS -DOS2 -march=pentium4 -idirafter /@unixroot/usr/include/os2tk45"
+    CFLAGS="$CFLAGS -DOS2 -march=pentium4 -idirafter /@unixroot/usr/include/os2tk45"
+    LDFLAGS="$LDFLAGS -Zomf -Zhigh-mem -lcx"
 fi
 
 dnl I would like to know of any concerns given by the C++ compiler.
