--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install libraries
         run: |
-          brew install autoconf automake nasm glfw glew coreutils sevenzip
+          brew install autoconf automake nasm glfw glew coreutils sevenzip libslirp fluid-synth pkg-config sdl2_net
           mkdir -p package/dosbox-x
           mkdir -p package/dosbox-x-sdl2
           # cd vs/sdlnet && ./build-dosbox.sh
@@ -92,7 +92,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install libraries
         run: |
-          brew install autoconf automake nasm glfw glew coreutils sevenzip
+          brew install autoconf automake nasm glfw glew coreutils sevenzip libslirp fluid-synth pkg-config sdl2_net
           mkdir -p package/dosbox-x
           mkdir -p package/dosbox-x-sdl2
           # cd vs/sdlnet && ./build-dosbox.sh
